--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.2",
     "jshint-stylish": "^2.0.1",
+    "rest": "^1.3.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1"
+    "watchify": "^3.2.1",
+    "when": "^3.7.5"
   }
 }
