--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browser-sync": "^2.7.12",
     "browserify": "^11.2.0",
     "del": "^2.0.2",
+    "es6-promise": "^3.0.2",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^3.0.2",
     "gulp-jscs": "^3.0.0",
