--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "rest": "^1.3.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.2.1",
-    "when": "^3.7.5"
+    "watchify": "^3.2.1"
   }
 }
