--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-util": "^3.0.2",
     "jshint-stylish": "^2.0.1",
     "moment": "^2.10.6",
+    "postal": "^1.0.8",
     "rest": "^1.3.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
